# fastapi_todo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  sample.env
dockerbuild/app/: Dockerfile  requirements.txt
src/: crud.py  database.py  main.py  models.py  sample.nev  schemas.py
src/alembic/: env.py
src/app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
