[tool.poetry]
name = "fastapi_todo"
version = "0.1.0"
description = ""
authors = ["kshiva1126"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.17"
pymysql = "^0.9.3"
typing = "^3.7.4"
pydantic = "^1.5.1"
PyJWT = "^1.7.1"
bcrypt = "^3.1.7"
pytest = "^5.4.3"
alembic = "^1.4.2"
python-dotenv = "^0.13.0"
debugpy = "^1.0.0-beta.11"
psycopg2-binary = "^2.8.5"
passlib = "^1.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
